--- a/css/0.css
+++ b/css/0.css
@@ -1,8 +1,8 @@
 body{
-  background-size:100% 100%;
+  background:no-repeat center center fixed;
   background-repeat: no-repeat;
-  background-color:black;
-  background-image: url;
+  background-image: radial-gradient(circle, black, #080808);
+  background-image: url
 }
 
 p{
@@ -20,7 +20,14 @@ a{
   font-family: 'Rajdhani', sans-serif;
   font-size:1.58rem;
   text-decoration:none;
+-webkit-transition: color 0.2s; 
+        transition: color 0.2s; 
+
 }
+
+    a:hover {
+        color: #898989;
+      }
 
 div.sticky {
   color:white;
