--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,7 @@
 body{
-  background-size:100% 100%;
+  background:no-repeat center center fixed;
   background-repeat: no-repeat;
-  background-color:black;
+  background-image: radial-gradient(circle, black, #080808);
   background-image: url
 }
 
@@ -10,7 +10,14 @@ a{
   font-size:1.6rem;
   text-decoration:none;
   color:#FFF;
+   -webkit-transition: color 0.2s; 
+        transition: color 0.2s; 
+
 }
+
+    a:hover {
+        color: #7c7c7c;
+    }
 
 p{
   font-family: 'Rajdhani', sans-serif;
@@ -25,6 +32,8 @@ h3{
 }
 
 #myBtn{
+  -webkit-transition: color 0.2s; 
+  transition: color 0.2s; 
   color:lightgrey;
   font-size:1.8rem;
   position: absolute;
@@ -40,6 +49,10 @@ h3{
   animation-timing-function: linear;
 }
 
+#myBtn:hover{
+  color: dimgrey;
+}
+
 .s1{
   position: absolute;
   top: 30%;
@@ -52,6 +65,8 @@ h3{
   margin: 0 auto;
   animation-delay: 0s;
 }
+
+
 
 .s2{
   position: absolute;
@@ -113,8 +128,6 @@ h3{
         padding-top: 350px;
         left: 0;
         top: 0;
-        width: 100%;
-        height: 100%;
         overflow: auto;
         background-color: black;
         cursor:help;
@@ -166,5 +179,7 @@ h3{
     to {
         transform:rotate(360deg);
     }
+
+
 
 
