--- a/css/5.css
+++ b/css/5.css
@@ -7,6 +7,20 @@ html,body {
   background-image: url
 }
 
+code{
+  font-family: 'Rajdhani', sans-serif;
+  font-size:1.3vw;
+  color:rgb(255, 204, 0);
+}
+
+code:hover {
+        color: #898989;
+      }
+
+span{
+  font-size:1vwrem;
+}
+
 section {
   display: flex;
   justify-content: center;
@@ -16,7 +30,7 @@ section {
 }
 
 .box {
-  margin-top:5rem;
+  margin-top:0.2rem;
   padding: 4vw;
   width: 50vw;
   background: black;
@@ -25,12 +39,16 @@ section {
   cursor: zoom-in;
 }
 
+.text{
+   color:#05ce78;
+}
+
 p {
   color:white;
   font-family: 'Arvo', serif;
   font-size: 1.2vw;
   line-height: 1.8vw;
-  padding: 8vw;
+  padding: 4vw;
 }
 
 .animation {
@@ -42,7 +60,34 @@ p {
   transform: translateY(-8px);
 }
 
-@media only screen and (max-width: 450px)
+@media only screen and (max-width: 1600px)
+    {
+p {
+  color:white;
+  font-family: 'Arvo', serif;
+  font-size: 1.5vw;
+  line-height: 2vw;
+  padding: 0.2vw;
+}
+
+.box {
+  margin-top:0.8rem;
+  width: 70vw;
+  background: black;
+  border:solid;
+  border-color:white;
+}
+
+span{
+  font-size: 1.5vw;
+}
+
+code{
+  font-size: 1.5vw;
+}
+}
+
+@media only screen and (max-width: 810px)
     {
 
 p {
@@ -61,4 +106,11 @@ p {
   border-color:white;
 }
 
+span{
+  font-size: 3vw;
+}
+
+code{
+  font-size: 3vw;
+}
 }
